# Neusta.CompamyService.Gui/OpenApi.json
@@ -138,9 +138,7 @@
             }
           }
         }
-      }
-    },
-    "/api/Company/companyID": {
+      },
       "delete": {
         "tags": [
           "Company"
@@ -316,6 +314,65 @@
             "description": "Success"
           }
         }
+      },
+      "delete": {
+        "tags": [
+          "Company"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/attributes/attributeId": {
+      "get": {
+        "tags": [
+          "Company"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/CompanyAttributeDto"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CompanyAttributeDto"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CompanyAttributeDto"
+                }
+              }
+            }
+          }
+        }
       }
     }
   },
@@ -346,6 +403,9 @@
             "type": "integer",
             "format": "int64"
           },
+          "visible": {
+            "type": "boolean"
+          },
           "companyAttributeValues": {
             "type": "array",
             "items": {
@@ -366,6 +426,13 @@
           "name": {
             "type": "string",
             "nullable": true
+          },
+          "orderNumber": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "visible": {
+            "type": "boolean"
           },
           "companyAttributeValues": {
             "type": "array",
