# Neusta.CompanyService.Abstraction/DTOs/CompanyAttributeDto.cs
@@ -8,6 +8,10 @@ namespace Neusta.CompanyService.DTOs
 
         public string Name { get; set; }
 
+        public int OrderNumber { get; set; }
+
+       public bool Visible { get; set; }
+
         public List<CompanyAttributeValueDto> CompanyAttributeValues { get; set; }
     }
 }
