# Neusta.CompanyService.Abstraction/Mappers/DomainToDtoMappingProfile.cs
@@ -1,0 +1,17 @@
+﻿using AutoMapper;
+using Neusta.CompanyService.Database.Entities;
+using Neusta.CompanyService.DTOs;
+
+namespace Neusta.CompanyService.Mappers
+{
+
+    public class DomainToDtoMappingProfile : Profile
+    {
+        public DomainToDtoMappingProfile()
+        {
+            CreateMap<Company, CompanyDto>().ReverseMap();
+            CreateMap<CompanyAttribute, CompanyAttributeDto>().ReverseMap();
+            CreateMap<CompanyAttributeValue, CompanyAttributeValueDto>().ReverseMap();
+        }
+    }
+}
