# Neusta.CompanyService.Database.Abstraction/Entities/CompanyAttribute.cs
@@ -1,4 +1,5 @@
 ﻿using System.Collections.Generic;
+using System.ComponentModel;
 using System.ComponentModel.DataAnnotations;
 using System.ComponentModel.DataAnnotations.Schema;
 
@@ -6,12 +7,19 @@ namespace Neusta.CompanyService.Database.Entities
 {
     public class CompanyAttribute
     {
-        [Key]
+        [Key] 
         public long Id { get; set; }
 
+        [Required]
+        [DefaultValue("Kein Name angegeben")]
         public string Name { get; set; }
 
-        [ForeignKey("CompanyAttributeId")]
+        public int OrderNumber { get; set; }
+
+        [DefaultValue(true)]
+        public bool Visible { get; set; }
+
+        [ForeignKey("CompanyAttributeId")] 
         public List<CompanyAttributeValue> CompanyAttributeValues { get; set; }
     }
 }
